[package]
name = "horizon_logger"
version = "0.1.0"
edition = "2021"
description = "Color-coded logging system for Horizon game server"
license = "MIT"

[dependencies]
chrono = "0.4"
colored = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"